aula-04/networking.tf
resource "aws_internet_gateway" "technova" {
  vpc_id = aws_vpc.technova.id

  tags = merge(local.common_tags, {
    Name = "technova-internet-gateway"
  })
}

resource "aws_route_table" "public" {
  vpc_id = aws_vpc.technova.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.technova.id
  }

  tags = merge(local.common_tags, {
    Name = "technova-public-route-table"
  })
}

resource "aws_route_table_association" "public_1" {
  subnet_id      = aws_subnet.public_1.id
  route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "public_2" {
  subnet_id      = aws_subnet.public_2.id
  route_table_id = aws_route_table.public.id
}
