aula-04/security-groups.tf
resource "aws_security_group" "api" {
  name        = "technova-api-security-group"
  description = "Security group da API TechNova"
  vpc_id      = aws_vpc.technova.id

  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "API Node.js"
    from_port   = 3000
    to_port     = 3000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = merge(local.common_tags, {
    Name = "technova-api-security-group"
  })
}

resource "aws_security_group" "db" {
  name        = "technova-db-security-group"
  description = "Security group do banco TechNova"
  vpc_id      = aws_vpc.technova.id

  ingress {
    description = "PostgreSQL interno da VPC"
    from_port   = 5432
    to_port     = 5432
    protocol    = "tcp"
    cidr_blocks = ["10.0.0.0/16"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = merge(local.common_tags, {
    Name = "technova-db-security-group"
  })
}
